Remove redundant API configuration files and add new proto files
This commit removes unnecessary files for API configuration and adds new protocol buffer files. With this change, the API configurations become efficient and less bloated. Maintenance of API configurations will be more straightforward going forward.
